# chisel-verilator-example

./: .gitignore  .scalafmt.conf  CMakeLists.txt  README.md  build.sbt  build.sc  gcd.vcd  makefile
.devcontainer/: Dockerfile  devcontainer.json  install.sh
src/main/scala/gcd/: DecoupledGCD.scala  GCD.scala
src/test/cxx/: GCD.cxx
src/test/scala/gcd/: GCDSpec.scala
